Fixed z-indexpt. 2

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -26,6 +26,7 @@ body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	z-index: 1;
 }
 
 .my-nav-links {
